--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -2,6 +2,6 @@
 #database.username=wegxlfzjjgxaxy
 #database.password=SSQyKKE_e93kiUCR-ehzMcKCxZ
 
-database.url=jdbc:postgresql://localhost:5432/topjava
-database.username=user
-database.password=password
+database.url=jdbc:postgresql://10.196.60.119:5432/topjava
+database.username=postgres
+database.password=123456
