--- a/src/main/resources/db/hsqldb.properties
+++ b/src/main/resources/db/hsqldb.properties
@@ -1,5 +1,5 @@
-#database.url=jdbc:hsqldb:file:D:/temp/topjava
-database.url=jdbc:hsqldb:mem:topjava
+database.url=jdbc:hsqldb:file:E:/temp/topjava
+#database.url=jdbc:hsqldb:mem:topjava
 
 database.username=sa
 database.password=
