4-profiles-connection-pool

--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -4,8 +4,7 @@
 
 database.url=jdbc:postgresql://10.196.60.119:5432/topjava
 database.username=postgres
-database.password=123456
-database.driverClassName=org.postgresql.Driver
+database.password=password
 
 database.init=true
 
