--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -4,7 +4,7 @@
 
 database.url=jdbc:postgresql://10.196.60.119:5432/topjava
 database.username=postgres
-database.password=password
+database.password=123456
 
 database.init=true
 
