--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -10,6 +10,25 @@ users.roles=Roles
 users.active=Active
 users.registered=Registered
 
+meals.head=Calories management
 meals.title=Meals
+meals.date=Date
+meals.description=Description
+meals.calories=Calories
+meals.addMeal=Add Meal
+meals.update=Update
+meals.delete=Delete
+meals.meal=Meal
+meals.dateTime=DateTime
+meals.fromDate=From Date
+meals.toDate=To Date
+meals.fromTime=From Time
+meals.toTime=To Time
+meals.editMeal=Edit meal
+meals.createMeal=Create meal
 
 common.select=Select
+common.home=Home
+common.save=Save
+common.filter=Filter
+common.cancel=Cancel
