--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -15,6 +15,7 @@ users.active=Active
 users.registered=Registered
 users.password=Password
 users.caloriesPerDay=Daily calorie limit
+users.emailExists=User with this email already present in application
 
 meals.title=Meals
 meals.edit=Edit meal
